    (LP: #1525685)
  * GnomeKeyGrabber: do not activate an action if it's a repeated one.
    (LP: #1572241)
  * Properly calculate array indexes to avoid crashes. (LP: #1570843)
  * Fallback to "background" class in case no background is specified
    for title bars and top panel. (LP: #1575527)
  * Do not reset the shortcut for icons that have their own shortcut.
    (LP: #1562847)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Sun, 15 May 2016 01:00:09 +0200

unity (7.4.0+16.04.20160415-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * Do not use pointers to LazyLoadTextures. (LP: #1569100)
  * Fix unity script crash. (LP: #1566565)
  * LockscreenController: Don't use SetActivate(False) for gnome-
    screensaver to prevent unlocking on tty switch. It will not only
    deactivate the screensaver but also unlock the screen. (LP:
    #1552537)
  * unityshell.xml: Fix typo (LP: #1559427)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 15 Apr 2016 05:33:08 +0000

unity (7.4.0+16.04.20160401.1-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * Improve the "lock on suspend" logic to always keep in sync the
    inhibitor with the lockscreen.

  [ Marco Trevisan (Treviño) ]
  * DecoratedWindow: Just send estimated extents on
    _NET_REQUEST_FRAME_EXTENTS (LP: #1368118)
  * TextureCache: add support for loading themed textures (LP: #903179,
    #1208790)
  * Unity: stop unity7 upstart instance if needed and restart it if not
    clearly requested (LP: #1555633)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 01 Apr 2016 23:11:47 +0000

unity (7.4.0+16.04.20160322-0ubuntu1) xenial; urgency=medium

  * ForceQuitDialog: set client leader

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 22 Mar 2016 15:36:52 +0000

unity (7.4.0+16.04.20160321-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * ApplicationLauncherIcon: use the starting property to show an icon
    when launched (LP: #676457)
